--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -2,8 +2,9 @@
 <html lang="en-UK">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="../styles.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
     <link rel="stylesheet" type="text/css" href="project-page.css">
+    <link rel="icon" type="image/png" href="/img/favicon.png">
     <title>Project Page</title>
 </head>
 <body>
