--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en-UK">
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="icon" type="image/png" href="img/favicon.png">
   <title>Home</title>
 </head>
 
