--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
-  <title>Home</title>
+  <title>About</title>
 </head>
 
 <body>
