--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
   <link rel="stylesheet" type="text/css" href="utility.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
-  <title>Home</title>
+  <title>Projects</title>
 </head>
 
 <body>
