--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,11 @@
 <html lang="en-UK">
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="contact.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
+  <script type="text/javascript" src="contact.js"></script>
   <title>Contact</title>
+
 </head>
 
 <body>
@@ -16,6 +19,26 @@
     </ul>
   </div>
 
-  <div style="padding:16px"></div>
+  <div style="padding:16px"><br><br><br></div>
+
+  <form action="https://formspree.io/f/xrgnreav" method="post" class="contact-centre">
+    <ul>
+      <li>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" />
+      </li>
+      <li>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="user_email" />
+      </li>
+      <li>
+        <label for="msg">Message:</label>
+        <textarea id="msg" name="user_message"></textarea>
+      </li>
+      <li>
+        <button type="submit">Submit</button>
+      </li>
+    </ul>
+  </form>
 </body>
 </html>
