Update the website's structure and add a blog section
This commit includes structural updates to the existing website, moving stylesheets and scripts to respective `styles` and `scripts` directories. The old link references have also been updated to point to the correct locations. Moreover, the Blog section has been added to the website, containing placeholder content for the time being. It also reorganizes navbar links and minor adjustments in styles.

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <title>About</title>
 </head>
@@ -10,8 +10,9 @@
   <div class="navbar">
     <ul>
       <li><a class="left" href="index.html">Home</a>
-      <li><a class="left" href="projects.html">Projects</a>
       <li><a class="left active">About</a>
+      <li><a class="left" href="projects.html">Projects</a>
+      <li><a class="left" href="blog.html">Blog</a>
       <li><a class="right" href="contact.html">Contact</a>
     </ul>
   </div>
