--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" type="text/css" href="utility.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles/utility.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <title>Projects</title>
 </head>
@@ -11,8 +11,9 @@
   <div class="navbar">
     <ul>
       <li><a class="left" href="index.html">Home</a>
-      <li><a class="left active">Projects</a>
       <li><a class="left" href="about.html">About</a>
+      <li><a class="left active">Projects</a>
+      <li><a class="left" href="blog.html">Blog</a>
       <li><a class="right" href="contact.html">Contact</a>
     </ul>
   </div>
