--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
   </div>
   <div style="padding:16px"></div><br><br>
-  <p>This is a test</p>
+  <p>This is a test.</p>
   <hr>
 </body>
 </html>
