Renammed all links to remove the .html extension. This stops the website working locally but removes the .html extension from the final URL. This change may be reverted.

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 <body>
   <div class="navbar">
     <ul>
-      <li><a class="left" href="index.html">Home</a>
+      <li><a class="left" href="./">Home</a>
       <li><a class="left active">About</a>
-      <li><a class="left" href="projects.html">Projects</a>
-      <li><a class="left" href="blog.html">Blog</a>
-      <li><a class="right" href="contact.html">Contact</a>
+      <li><a class="left" href="projects">Projects</a>
+      <li><a class="left" href="blog">Blog</a>
+      <li><a class="right" href="contact">Contact</a>
     </ul>
   </div>
 
