--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
 <head>
   <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
-
-  <script>
-    // Redirect index.html connections to the main domain
-    if (window.location.pathname === "/index.html")
-      window.location.href ='https://timurinal.co.uk'
-  </script>
-
   <title>Home</title>
 </head>
 
@@ -17,10 +10,10 @@
   <div class="navbar">
     <ul>
       <li><a class="left active">Home</a>
-      <li><a class="left" href="about.html">About</a>
-      <li><a class="left" href="projects.html">Projects</a>
-      <li><a class="left" href="blog.html">Blog</a>
-      <li><a class="right" href="contact.html">Contact</a>
+      <li><a class="left" href="about">About</a>
+      <li><a class="left" href="projects">Projects</a>
+      <li><a class="left" href="blog">Blog</a>
+      <li><a class="right" href="contact">Contact</a>
     </ul>
   </div>
   <div style="padding:16px"></div><br><br>
