--- a/projects.html
+++ b/projects.html
@@ -10,11 +10,11 @@
 <body>
   <div class="navbar">
     <ul>
-      <li><a class="left" href="index.html">Home</a>
-      <li><a class="left" href="about.html">About</a>
+      <li><a class="left" href="./">Home</a>
+      <li><a class="left" href="about">About</a>
       <li><a class="left active">Projects</a>
-      <li><a class="left" href="blog.html">Blog</a>
-      <li><a class="right" href="contact.html">Contact</a>
+      <li><a class="left" href="blog">Blog</a>
+      <li><a class="right" href="contact">Contact</a>
     </ul>
   </div>
 
