--- a/blog.html
+++ b/blog.html
@@ -10,11 +10,11 @@
 <body>
     <div class="navbar">
         <ul>
-            <li><a class="left" href="./">Home</a>
-            <li><a class="left" href="about">About</a>
-            <li><a class="left" href="projects">Projects</a>
+            <li><a class="left" href="index.html">Home</a>
+            <li><a class="left" href="about.html">About</a>
+            <li><a class="left" href="projects.html">Projects</a>
             <li><a class="left active">Blog</a>
-            <li><a class="right" href="contact">Contact</a>
+            <li><a class="right" href="contact.html">Contact</a>
         </ul>
     </div>
     <div style="padding:16px"></div><br><br>
