--- a/contact.html
+++ b/contact.html
@@ -12,10 +12,10 @@
 <body>
   <div class="navbar">
     <ul>
-      <li><a class="left" href="./">Home</a>
-      <li><a class="left" href="about">About</a>
-      <li><a class="left" href="projects">Projects</a>
-      <li><a class="left" href="blog">Blog</a>
+      <li><a class="left" href="index.html">Home</a>
+      <li><a class="left" href="about.html">About</a>
+      <li><a class="left" href="projects.html">Projects</a>
+      <li><a class="left" href="blog.html">Blog</a>
       <li><a class="right active">Contact</a>
     </ul>
   </div>
