--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
     <div class="middle">
         <h1>404 Page Not Found</h1>
         <h2>The page you requested is either unavailable or does not exist</h2>
-        <a href="./" class="link"><h3><- BACK HOME</h3></a>
+        <a href="index.html" class="link"><h3><- BACK HOME</h3></a>
     </div>
 </body>
 </html>
