--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <div class="navbar">
     <ul>
       <li><a class="left active">Home</a>
-      <li><a class="left" href="about">About</a>
-      <li><a class="left" href="projects">Projects</a>
-      <li><a class="left" href="blog">Blog</a>
-      <li><a class="right" href="contact">Contact</a>
+      <li><a class="left" href="about.html">About</a>
+      <li><a class="left" href="projects.html">Projects</a>
+      <li><a class="left" href="blog.html">Blog</a>
+      <li><a class="right" href="contact.html">Contact</a>
     </ul>
   </div>
   <div style="padding:16px"></div><br><br>
