Added more responsive styling.

--- a/blogs/blog-page.html
+++ b/blogs/blog-page.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <a class="link" href="../blog.html"><h3 class="left-element"><- BACK</h3></a>
-        <h2 class="centre-element">Blog Title</h2>
+        <h2 class="centre-element title">Blog Title</h2>
     </div>
 
     <br><hr><br><br>
