--- a/blogs/blog-page.html
+++ b/blogs/blog-page.html
@@ -10,10 +10,14 @@
 <body>
     <div class="container">
         <a class="link" href="../blog.html"><h3 class="left-element"><- BACK</h3></a>
-        <h2 class="centre-element title">Blog Title</h2>
+        <div class="centre-element">
+            <h2 class="title">Blog Title</h2>
+            <h3 class="author">Timur Inal</h3>
+            <h3 class="date">19/04/2024</h3>
+        </div>
     </div>
 
-    <br><hr><br><br>
+    <br><br><br><hr><br><br>
 
     <div class="justified">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in odio ut ante viverra consectetur. Integer pulvinar arcu vitae odio tristique, eget euismod leo vestibulum. Suspendisse potenti. Sed ultricies nunc id eros suscipit, non efficitur orci dictum. Duis ac est urna. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Duis ut magna vitae felis suscipit laoreet sit amet eget lacus. Sed eget tortor justo. Sed ullamcorper sapien ac dui tempor, eu pulvinar felis scelerisque. Fusce rutrum hendrerit libero, eget volutpat purus commodo a. Cras non nisi sit amet sapien aliquam rhoncus eget id dui.
