--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <div style="padding:16px"><br><br><br></div>
 
   <h1>Contact</h1>
-  <h3>Send me a message!<br>I'll try and respond as soon as possible</h3><br>
+  <h3>Send me a message!<br>I'll try to respond as soon as possible</h3><br>
 
   <form action="https://formspree.io/f/xrgnreav" method="post" class="contact-centre">
     <ul>
