Changed responsive styling on blog page. Added first project page

--- a/projects.html
+++ b/projects.html
@@ -25,53 +25,8 @@
   <h3 class="centre">More of my specific projects are available in my blog</h3>
 
   <div class="project-grid">
-    <a href="projects/project-page.html" class="project"><div>
-      <p>Project 1</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 2</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 3</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 4</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 5</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 1</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 2</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 3</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 4</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 5</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 1</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 2</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 3</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 4</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 5</p>
-    </div></a>
-    <a href="#" class="project"><div>
-      <p>Project 5</p>
+    <a href="projects/timer-app.html" class="project"><div>
+      <p>BeamOut Studios<br>Timer App</p>
     </div></a>
   </div>
 </body>
