Begun reprogramming website to focus more on mobile optimisation

--- a/index.html
+++ b/index.html
@@ -1,23 +1,13 @@
 <!DOCTYPE html>
-<html lang="en-UK">
+<html lang="en">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/styles.css">
-  <link rel="icon" type="image/png" href="img/favicon.png">
-  <title>Home</title>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <script src="scripts/index.js"></script>
 </head>
-
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a class="left active">Home</a>
-      <li><a class="left" href="about.html">About</a>
-      <li><a class="left" href="projects.html">Projects</a>
-      <li><a class="left" href="blog.html">Blog</a>
-      <li><a class="right" href="contact.html">Contact</a>
-    </ul>
-  </div>
-  <div style="padding:16px"></div><br><br>
-  <p>This is a test</p>
-  <hr>
+<h1>Hello World!</h1>
 </body>
 </html>
