--- a/old/projects/project-page.html
+++ b/old/projects/project-page.html
@@ -2,9 +2,9 @@
 <html lang="en-UK">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="/old/stylesyles/styles.css">
     <link rel="stylesheet" type="text/css" href="project-page.css">
-    <link rel="icon" type="image/png" href="/img/favicon.png">
+    <link rel="icon" type="image/png" href="/old/img/img/favicon.png">
     <title>Project Page</title>
 </head>
 <body>
