--- a/old/projects/timer-app.html
+++ b/old/projects/timer-app.html
@@ -2,9 +2,9 @@
 <html lang="en-UK">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="/old/stylesyles/styles.css">
     <link rel="stylesheet" type="text/css" href="project-page.css">
-    <link rel="icon" type="image/png" href="/img/favicon.png">
+    <link rel="icon" type="image/png" href="/old/img/img/favicon.png">
     <script src="../scripts/project-page.js"></script>
     <title>Timer App</title>
 </head>
@@ -21,7 +21,7 @@
 
     <div class="justified" id="content-main">
         <p>
-I was asked by <a href="https://www.beamoutstudios.co.uk" style="color: white;">BeamOut Studios</a>, an event live-streaming company, to create a remote-controllable timer that they can use in their events.
+I was asked by <a href="https://www.beamoutstudios.co.uk" style="color: white;">BeamOut Studios</a>, an event live streaming company, to create a remote-controllable timer that they can use in their events.
 
 For certain events they live-streamed, a countdown timer that could be controlled in realtime, remotely, was needed to ensure that speakers stuck to their speaking slot. Most of the apps that already existed at the time were either missing customisability, were lacking in features, or locked a lot of the features behind a paywall. Although it isn't the most efficient, I made the app in Unity as it allowed me to easily create responsive UI and implement networking.
 
@@ -30,7 +30,7 @@ For certain events they live-streamed, a countdown timer that could be controlle
     <li> Something clean and simple that could be customised with branding, specific colours, etc</li>
     <li> The ability to add the event name to the UI that updated in realtime</li>
     <li> Colour changing timer that turns green at more than 5 minutes, orange at less than 5 minutes, and red at less than 60 seconds</li>
-    <li> The ability to send realtime popup messages to give the speaker</li>
+    <li> The ability to send realtime popup messages to send to the speaker.</li>
     <li> Server browser so that users didn't have to mess around with IP addresses for connecting</li>
     <li> Ensuring the app was as optimised as possible to not affect the network in any way and that the app didn't lag any hardware</li>
 </ul>
