--- a/about.html
+++ b/about.html
@@ -2,21 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>About</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles/main-desktop.css">
     <link rel="stylesheet" type="text/css" href="styles/main-mobile.css">
     <script src="scripts/index.js"></script>
 </head>
 <body>
-    <div class="navbar">
-        <ul>
-            <li><a class="left active">Home</a>
-            <li><a class="left" href="about.html">About</a>
-            <li><a class="left" href="#">Projects</a>
-            <li><a class="left" href="#">Blog</a>
-            <li><a class="right" href="#">Contact</a>
-        </ul>
-    </div>
+<div class="navbar">
+    <ul>
+        <li><a class="left" href="index.html">Home</a>
+        <li><a class="left active">About</a>
+        <li><a class="left" href="#">Projects</a>
+        <li><a class="left" href="#">Blog</a>
+        <li><a class="right" href="#">Contact</a>
+    </ul>
+</div>
 </body>
 </html>
