Updated website layout for mobile and desktop views, added navbar and home intro blocks, revised navigation menu links, and introduced random background selection.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Timur Inal | Game & Graphics Programmer</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles/main-desktop.css">
     <link rel="stylesheet" type="text/css" href="styles/main-mobile.css">
@@ -10,13 +10,22 @@
 </head>
 <body>
     <div class="navbar">
-        <ul>
-            <li><a class="left active">Home</a>
-            <li><a class="left" href="about.html">About</a>
-            <li><a class="left" href="#">Projects</a>
-            <li><a class="left" href="#">Blog</a>
-            <li><a class="right" href="#">Contact</a>
-        </ul>
+        <div class="navbar-container">
+            <ul>
+                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="home-intro">
+        <div class="home-intro-text">
+            <h1>Timur Inal</h1>
+            <h2>Game & Graphics Programmer</h2>
+        </div>
     </div>
 </body>
 </html>
