--- a/about.html
+++ b/about.html
@@ -9,14 +9,16 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
-<div class="navbar">
-    <ul>
-        <li><a class="left" href="index.html">Home</a>
-        <li><a class="left active">About</a>
-        <li><a class="left" href="#">Projects</a>
-        <li><a class="left" href="#">Blog</a>
-        <li><a class="right" href="#">Contact</a>
-    </ul>
-</div>
+    <div class="navbar">
+        <div class="navbar-container">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="about.html">About</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
