Added new 'projects.html' file, updated mobile and desktop styles, and refactored navigation bars in 'index.html' and 'about.html'.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="navbar-container">
-            <ul>
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+        <h2 class="title"><a href="./">Timur Inal</a></h2>
+        <ul>
+            <li><a class="active" href="./">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </div>
+
 
     <div class="home-intro">
         <div class="home-intro-text">
