--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About</title>
+    <title>Projects</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" type="text/css" href="styles/main-desktop.css">
     <link rel="stylesheet" type="text/css" href="styles/main-mobile.css">
@@ -12,9 +12,9 @@
     <div class="navbar">
         <h2 class="title"><a href="./">Timur Inal</a></h2>
         <ul>
-            <li><a class="active" href="./">Home</a></li>
+            <li><a href="./">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a class="active" href="projects.html">Projects</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
