--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="navbar">
-        <h2 class="title"><a href="./">Timur Inal</a></h2>
+        <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
         <ul>
-            <li><a class="active" href="./">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a class="active" href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
