--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h2 class="title"><a href="./">Timur Inal</a></h2>
+        <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
         <ul>
             <li><a class="active" href="./">Home</a></li>
             <li><a href="about.html">About</a></li>
