--- a/old/blogs/blog-page.html
+++ b/old/blogs/blog-page.html
@@ -11,7 +11,7 @@
     <div class="container">
         <a class="link" href="../blog.html"><h3 class="left-element"><- BACK</h3></a>
         <div class="centre-element">
-            <h2 class="title">Blog Title</h2>
+            <h2 class="navbar-title">Blog Title</h2>
             <h3 class="author">Timur Inal</h3>
             <h3 class="date">19/04/2024</h3>
         </div>
