--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="navbar">
-        <h2 class="title"><a href="./">Timur Inal</a></h2>
+        <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
         <ul>
             <li><a href="./">Home</a></li>
             <li><a href="about.html">About</a></li>
@@ -18,6 +18,24 @@
             <li><a href="#">Blog</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
+    </div>
+
+    <h1 class="text-centre title"><strong>Projects</strong></h1>
+    <h3 class="text-centre">These are some projects I've been working on</h3>
+
+    <div class="project-grid">
+        <a href="projects/project-page.html" class="project" id="project1"><div>
+            <p>Project Name</p>
+        </div></a>
+        <a href="#" class="project" id="project2"><div>
+            <p>Project Name</p>
+        </div></a>
+        <a href="#" class="project" id="project3"><div>
+            <p>Project Name</p>
+        </div></a>
+        <a href="#" class="project" id="project4"><div>
+            <p>Project Name</p>
+        </div></a>
     </div>
 </body>
 </html>
