Added styles, scripts, and structural HTML in project page; created new project-page.css and project-page.js files; removed background image from main-desktop.css.

--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -3,8 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Project Page</title>
+    <link rel="icon" type="image/png" href="../img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="../styles/main-desktop.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main-mobile.css">
+    <link rel="stylesheet" type="text/css" href="project-page.css">
+    <script src="../scripts/index.js"></script>
+    <script src="project-page.js"></script>
 </head>
 <body>
-    <h1>TODO</h1>
+    <div class="navbar">
+        <h2 class="navbar-title"><a href="../">Timur Inal</a></h2>
+        <ul>
+            <li><a href="../">Home</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a class="active" href="../projects.html">Projects</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </div>
+
+    <div class="title">
+        <h1 class="text-centre">Project Page</h1>
+
+        <!--    Don't put anything important in the h3 below    -->
+        <!--            the text is replaced by code            -->
+        <h3 class="text-centre status in-dev"></h3>
+    </div>
 </body>
 </html>
