--- a/index.html
+++ b/index.html
@@ -9,23 +9,11 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
-    <div class="navbar">
-        <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
-        <ul>
-            <li><a class="active" href="./">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+<div class="home-intro">
+    <div class="home-intro-text">
+        <h1>Website under construction</h1>
+        <h2>Check back soon!</h2>
     </div>
-
-
-    <div class="home-intro">
-        <div class="home-intro-text">
-            <h1>Timur Inal</h1>
-            <h2>Game & Graphics Programmer</h2>
-        </div>
-    </div>
+</div>
 </body>
 </html>
