--- a/_index.html
+++ b/_index.html
@@ -28,4 +28,7 @@
         </div>
     </div>
 </body>
+<footer>
+    <p class="text-centre">&copy; 2024 Timur Inal. All rights reserved.</p>
+</footer>
 </html>
