--- a/about.html
+++ b/about.html
@@ -20,4 +20,7 @@
         </ul>
     </div>
 </body>
+<footer>
+    <p class="text-centre">&copy; 2024 Timur Inal. All rights reserved.</p>
+</footer>
 </html>
