--- a/projects.html
+++ b/projects.html
@@ -38,4 +38,7 @@
         </div></a>
     </div>
 </body>
+<footer>
+    <p class="text-centre">&copy; 2024 Timur Inal. All rights reserved.</p>
+</footer>
 </html>
