Added contact page with form handling, updated navigation links, added 404 error page, contact form styling, and placeholder text for 'About' section.

--- a/about.html
+++ b/about.html
@@ -16,9 +16,13 @@
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+
+    <h1 class="text-centre title"><strong>About</strong></h1>
+
+    <p>TODO</p>
 </body>
 <footer>
     <p class="text-centre">&copy; 2024 Timur Inal. All rights reserved.</p>
