--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -18,7 +18,7 @@
             <li><a href="../about.html">About</a></li>
             <li><a class="active" href="../projects.html">Projects</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="../contact.html">Contact</a></li>
         </ul>
     </div>
 
