Added contact page with form handling, updated navigation links, added 404 error page, contact form styling, and placeholder text for 'About' section.

--- a/_index.html
+++ b/_index.html
@@ -13,10 +13,10 @@
         <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
         <ul>
             <li><a class="active" href="./">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="projects.html">Projects</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a href="./projects">Projects</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./contact">Contact</a></li>
         </ul>
     </div>
 
