Updated hyperlink references in various HTML files

--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     <div class="not-found-text">
         <h1>404 Page not found</h1>
         <h2>The page you requested is unavailable or doesn't exist</h2>
-        <a href="_index.html" class="link"><h3><- Back home</h3></a>
+        <a href="./" class="link"><h3><- Back home</h3></a>
     </div>
 </body>
 </html>
