--- a/projects.html
+++ b/projects.html
@@ -13,10 +13,10 @@
         <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
         <ul>
             <li><a href="./">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a class="active" href="projects.html">Projects</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a class="active" href="./projects">Projects</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="./contact">Contact</a></li>
         </ul>
     </div>
 
@@ -24,7 +24,7 @@
     <h3 class="text-centre">These are some projects I've been working on</h3>
 
     <div class="project-grid">
-        <a href="projects/project-page.html" class="project" id="project1"><div>
+        <a href="projects/project-page" class="project" id="project1"><div>
             <p>Project Name</p>
         </div></a>
         <a href="#" class="project" id="project2"><div>
