--- a/projects/project-page.html
+++ b/projects/project-page.html
@@ -15,10 +15,10 @@
         <h2 class="navbar-title"><a href="../">Timur Inal</a></h2>
         <ul>
             <li><a href="../">Home</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li><a class="active" href="../projects.html">Projects</a></li>
+            <li><a href="../about">About</a></li>
+            <li><a class="active" href="../projects">Projects</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="../contact">Contact</a></li>
         </ul>
     </div>
 
