--- a/_index.html
+++ b/_index.html
@@ -15,7 +15,7 @@
             <li><a class="active" href="./">Home</a></li>
             <li><a href="./about">About</a></li>
             <li><a href="./projects">Projects</a></li>
-            <li><a href="#">Blog</a></li>
+            <!--<li><a href="#">Blog</a></li>-->
             <li><a href="./contact">Contact</a></li>
         </ul>
     </div>
