--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <li><a href="./">Home</a></li>
       <li><a href="./about">About</a></li>
       <li><a href="./projects">Projects</a></li>
-      <li><a href="#">Blog</a></li>
+      <!--<li><a href="#">Blog</a></li>-->
       <li><a class="active" href="./contact">Contact</a></li>
     </ul>
   </div>
