Updated projects section in projects.html and modified transition speed and background color for project1 in main-desktop.css

--- a/projects.html
+++ b/projects.html
@@ -24,17 +24,8 @@
     <h3 class="text-centre">These are some projects I've been working on</h3>
 
     <div class="project-grid">
-        <a href="projects/project-page" class="project" id="project1"><div>
-            <p>Project Name</p>
-        </div></a>
-        <a href="#" class="project" id="project2"><div>
-            <p>Project Name</p>
-        </div></a>
-        <a href="#" class="project" id="project3"><div>
-            <p>Project Name</p>
-        </div></a>
-        <a href="#" class="project" id="project4"><div>
-            <p>Project Name</p>
+        <a href="projects/timer-app" class="project" id="project1"><div>
+            <p>Event Timer</p>
         </div></a>
     </div>
 </body>
