Added new project 'Path Tracer', updated title in 'Event Timer App', and introduced several configuration files for project settings.

--- a/projects/timer-app.html
+++ b/projects/timer-app.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Project Page</title>
+    <title>Event Timer App</title>
     <link rel="icon" type="image/png" href="../img/favicon.png">
     <link rel="stylesheet" type="text/css" href="../styles/main-desktop.css">
     <link rel="stylesheet" type="text/css" href="../styles/main-mobile.css">
