--- a/projects.html
+++ b/projects.html
@@ -27,6 +27,9 @@
         <a href="projects/timer-app" class="project" id="project1"><div>
             <p>Event Timer</p>
         </div></a>
+        <a href="projects/path-tracer" class="project" id="project2"><div>
+            <p>Path Tracer</p>
+        </div></a>
     </div>
 </body>
 <footer>
