Updated index.html with a new navbar and homepage introduction

--- a/index.html
+++ b/index.html
@@ -9,11 +9,23 @@
     <script src="scripts/index.js"></script>
 </head>
 <body>
-<div class="home-intro">
-    <div class="home-intro-text">
-        <h1>Website under construction</h1>
-        <h2>Check back soon!</h2>
+    <div class="navbar">
+        <h2 class="navbar-title"><a href="./">Timur Inal</a></h2>
+        <ul>
+            <li><a class="active" href="./">Home</a></li>
+            <li><a href="./about">About</a></li>
+            <li><a href="./projects">Projects</a></li>
+            <!--<li><a href="#">Blog</a></li>-->
+            <li><a href="./contact">Contact</a></li>
+        </ul>
     </div>
-</div>
+
+
+    <div class="home-intro">
+        <div class="home-intro-text">
+            <h1>Timur Inal</h1>
+            <h2>Game & Graphics Programmer</h2>
+        </div>
+    </div>
 </body>
 </html>
