Created 'Realtime Atmosphere' project page, added link to it in 'Projects', and refactored stylesheets.

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-UK">
 <head>
-  <link rel="stylesheet" type="text/css" href="styles/main-desktop.css">
+  <link rel="stylesheet" type="text/css" href="styles/styles.css">
   <link rel="stylesheet" type="text/css" href="styles/contact.css">
   <link rel="icon" type="image/png" href="img/favicon.png">
   <script type="text/javascript" src="scripts/contact.js"></script>
