--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Projects</title>
     <link rel="icon" type="image/png" href="img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="styles/main-desktop.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
     <link rel="stylesheet" type="text/css" href="styles/main-mobile.css">
     <script src="scripts/index.js"></script>
 </head>
@@ -29,6 +29,9 @@
         </div></a>
         <a href="projects/path-tracer" class="project" id="project2"><div>
             <p>Path Tracer</p>
+        </div></a>
+        <a href="projects/atmosphere" class="project" id="project3"><div>
+            <p>Realtime Atmosphere</p>
         </div></a>
     </div>
 </body>
