--- a/projects/timer-app.html
+++ b/projects/timer-app.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Event Timer App</title>
     <link rel="icon" type="image/png" href="../img/favicon.png">
-    <link rel="stylesheet" type="text/css" href="../styles/main-desktop.css">
+    <link rel="stylesheet" type="text/css" href="../styles/styles.css">
     <link rel="stylesheet" type="text/css" href="../styles/main-mobile.css">
     <link rel="stylesheet" type="text/css" href="project-page.css">
     <script src="../scripts/index.js"></script>
@@ -68,7 +68,7 @@
     <div class="centre-image">
         <div class="">
             <a href="img/timer-app-screenshot.png" target="_blank"><img src="img/timer-app-screenshot.png" alt="Screenshot of a remote controllable timer interface designed in the Unity engine, titled 'Live Event.' The screen displays a large digital timer reading '05:12:07' with arrows pointing upwards around the numbers, indicating the timer can be adjusted. Below the timer are buttons labelled 'Set Timer,' 'Start Timer,' and 'Stop Timer,' with the Start Timer button in green and the Stop Timer button in red, for controlling the timer. The bottom of the screen shows an IP address '172.22.32.198' and a port number '27017,' indicating network connectivity. The interface has a purple background, and the bottom right corner has a logo with the text 'BeamOut Studios' alongside a network status of 'Excellent'." width="960" height="540"></a>
-            <div class="desc">Add a description of the image here</div>
+            <div class="desc"></div>
         </div>
     </div>
 
